--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       <div class="md:order-2 relative group overflow-hidden rounded-xl h-[400px]">
         <img src="./assets/images/Variation_pic1.png" class="w-full h-full object-cover rounded-xl transition duration-700 group-hover:opacity-0" />
         <video autoplay muted loop playsinline class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition duration-700">
-          <source src="/XT-portfolio/main/assets/videos/Variation_video1.mp4" type="video/mp4" />
+          <source src="./assets/videos/Variation_video1.mp4" type="video/mp4" />
         </video>
       </div>
       <div class="md:order-1 space-y-4">
@@ -236,7 +236,7 @@
                  class="w-full h-full object-cover rounded-xl transition duration-700 group-hover:opacity-0" />
             <video autoplay muted loop playsinline
                  class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition duration-700">
-              <source src="/XT-portfolio/main/assets/videos/amiam_video1.mp4" type="video/mp4" />
+              <source src="./assets/videos/amiam_video1.mp4" type="video/mp4" />
             </video>
           </div> 
       <div class="space-y-4">
@@ -260,7 +260,7 @@
       <div class="md:order-2 relative group overflow-hidden rounded-xl h-[400px]">
         <img src="./assets/images/room_PIC1.png" class="w-full h-full object-cover rounded-xl transition duration-700 group-hover:opacity-0" />
         <video autoplay muted loop playsinline class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition duration-700">
-          <source src="/XT-portfolio/main/assets/videos/room_v1.mp4" type="video/mp4" />
+          <source src="./assets/videos/room_v1.mp4" type="video/mp4" />
         </video>
       </div>
       <div class="md:order-1 space-y-4">
@@ -286,7 +286,7 @@
                class="w-full h-full object-cover rounded-xl transition duration-700 group-hover:opacity-0" />
           <video autoplay muted loop playsinline
                class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition duration-700">
-            <source src="/XT-portfolio/main/assets/videos/Reminisce_video1.mp4" type="video/mp4" />
+            <source src="./assets/videos/Reminisce_video1.mp4" type="video/mp4" />
           </video>
         </div> 
     <div class="space-y-4">
@@ -310,7 +310,7 @@
       <div class="md:order-2 relative group overflow-hidden rounded-xl h-[400px]">
         <img src="./assets/images/Paradise_pic1.png" class="w-full h-full object-cover rounded-xl transition duration-700 group-hover:opacity-0" />
         <video autoplay muted loop playsinline class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition duration-700">
-          <source src="/XT-portfolio/main/assets/videos/Paradise_video1.mp4" type="video/mp4" />
+          <source src="./assets/videos/Paradise_video1.mp4" type="video/mp4" />
         </video>
       </div>
       <div class="md:order-1 space-y-4">
@@ -335,7 +335,7 @@
                class="w-full h-full object-cover rounded-xl transition duration-700 group-hover:opacity-0" />
           <video autoplay muted loop playsinline
                class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition duration-700">
-            <source src="/XT-portfolio/main/assets/videos/mirage_v1.mp4" type="video/mp4" />
+            <source src="./assets/videos/mirage_v1.mp4" type="video/mp4" />
           </video>
         </div> 
     <div class="space-y-4">
