--- a/index.html
+++ b/index.html
@@ -451,7 +451,8 @@
       </a>
       <a href="mailto:elowen_zhang@163.com" class="hover:text-blue-400 transition-colors duration-300 flex flex-col items-center">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mb-2" fill="currentColor" viewBox="0 0 24 24"><path d="M12 12.713l-11.985-9.713h23.97l-11.985 9.713zm0 2.574l-12-9.725v15.438h24v-15.438l-12 9.725z"/></svg>
-        Email
+        <span data-lang="en">elowen_zhang@163.com</span>
+        <span data-lang="zh" class="hidden">elowen_zhang@163.com</span>
       </a>
     </div>
   </section>
