--- a/Room.html
+++ b/Room.html
@@ -642,9 +642,11 @@
     'vid': 'ga697f2e89d9b79fb63163a8e2d57aee_g',
     'autoplay': 1, 
     'loop': 1, 
+    'volume': 0, // 静音播放
+    'muted': 1, // 强制静音
     'playsafe': '', 
     'preload': 'auto', 
-    // 播放器事件回调
+
     'onReady': function() {
       console.log('播放器准备就绪，强制播放...');
       
