--- a/index.html
+++ b/index.html
@@ -3370,7 +3370,7 @@
               <h3 class="text-4xl font-bold text-white reveal hidden group-hover:text-purple-200 transition-colors duration-300" data-lang="zh">明日之前</h3>
               
               <p class="text-gray-300 text-lg leading-relaxed reveal" data-lang="en">Memory doesn't fade. It only waits — for you to look back.</p>
-              <p class="text-gray-300 text-lg leading-relaxed reveal hidden" data-lang="zh">记忆未曾褪色，它只是静静地等待你再次凝视。</p>
+              <p class="text-gray-300 text-lg leading-relaxed reveal hidden" data-lang="zh">记忆未曾褪色，它只是静静地等待你。</p>
               
               <div class="pt-4">
                 <a href="Reminisce.html" class="group/btn inline-flex items-center gap-3 px-8 py-4 text-purple-400 border border-purple-400/50 rounded-full overflow-hidden relative bg-black/20 backdrop-blur-sm hover:text-white hover:border-purple-400 transition-all duration-300">
